@@ -7,6 +7,7 @@
 - 2020-07-12                                -
 ---------------------------------------------
 .: WSW: Task: Update merchant home page (WSW-71)
+.: WSW: Task: Adding loading spinner (WSW-60)
 
 ---------------------------------------------
 - 2020-07-11                                -
